--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,12 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --green:#24B47E;
+  --black:#181818;
+  --white:#A1A1AA;
+  --gray:#2a2a2a;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Rosario:wght@344&display=swap');
+body{
+  padding:0;
+  margin: 0;
+  font-family:  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
