--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -3,6 +3,7 @@
   --black:#181818;
   --white:#A1A1AA;
   --gray:#2a2a2a;
+  --black1:#1F1F1F;
 }
 @import url('https://fonts.googleapis.com/css2?family=Rosario:wght@344&display=swap');
 body{
