--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -11,9 +11,11 @@
     background-color:var(--green);
     color: white;
     font-size: 15px;
+    cursor: pointer;
 }
 .green-solid-button:hover{
     box-shadow: 0 0 10px 2px var(--green);
+
 }
 .button-green-outline{
     outline:none;
@@ -23,6 +25,7 @@
     color: var(--green);
     background-color:white;
     font-size: 15px;
+    cursor:pointer
 }
 .button-green-outline:hover{
     background-color:var(--green);
