--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,5 +1,8 @@
 .navbar{
     height:60px;
+    position:fixed;
+    top:0px;
+    width:100%;
     display: flex;
     align-items: center;
     justify-content:space-between;
