--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -5,24 +5,21 @@
 }
 .container1{
     background-color: var(--black1);
-    height:auto;
-    flex-grow: 9;
-    min-width:auto;
+    height:105vh;
+    width:30vw;
 }
 .empty-space{
     background-color:var(--green);
-    height:auto;
-    flex-grow: 0;
-    max-width: auto;
-    
+    height:105vh;
+    width:70vw;
 }
 .form-container{
-    max-width: 400px;
-    margin:10px auto;
+    max-width: 25vw;
     background-color:var(--black1);
     height:400px;
-    margin-top:120px;    
-    padding:20px
+    margin:10px auto;
+    margin-top:120px;
+    
 }
 .login-input{
     width:270px;
@@ -98,7 +95,9 @@
 }
 
 @media only screen and (max-width: 1000px) {
-
+    body{
+        background:red;
+    }
     .login-input-container{
         margin:40px 10px;
     }
@@ -110,18 +109,12 @@
         height:auto
         
     }
-    .Login-container{
-        display:flex;
-        flex-direction:row;
-        align-items:center;
-        justify-content:center
-    }
     .form-container{
+        max-width: 80vw;
         background-color:var(--black1);
         height:95vh;
         margin:10px auto;
         margin-top:40px;
-        padding:10px
         
     }
     .login-input{
