--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.flex{
+    display: flex;
+    flex-direction: row;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.green-solid-button{
+    outline:none;
+    border:none;
+    padding:10px 25px;
+    border-radius:5px;
+    background-color:var(--green);
+    color: white;
+    font-size: 15px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.green-solid-button:hover{
+    box-shadow: 0 0 10px 2px var(--green);
 }
-
-.App-link {
-  color: #61dafb;
+.button-green-outline{
+    outline:none;
+    border:1px solid var(--green);
+    padding:10px 25px;
+    border-radius:5px;
+    color: var(--green);
+    background-color:white;
+    font-size: 15px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-green-outline:hover{
+    background-color:var(--green);
+    color:white
+}
+.green-text{
+    color:var(--green);
+}
+.large-text{
+    font-size:36px;
+    font-family:'Rosario', sans-serif;
+}
+.white-text{
+    color:white;
+}
+.link{
+    text-decoration: none;
+    color:var(--green);
 }
